# dotfiles

./: .colordiffrc  .editorconfig  .gitignore  .gitmodules  .screenrc  .tmux.conf  .vimrc  .zshrc  Cargo.toml  README.md  bootstrap.bash  install  pbcopy  pssh  setup.sh
.config/: starship.toml
.devcontainer/: devcontainer.json
.emacs.d/: .gitignore  .mc-lists.el  init.el
.emacs.d.new/: init.el
.emacs.d.old/: init.el
.github/: dependabot.toml
.vim/: .gitignore  .netrwhist  vimrc
.zsh/: .gitignore  alias.zsh  env.zsh  fzf.zsh  ssh.zsh  tmux.zsh
crates/coral/: Cargo.toml
crates/coral/src/: main.rs  plugin.rs
lib/: common.bash  os.rhai
modules/: bat.bash  bat.rhai  cargo_binstall.bash  cargo_update.bash  curl.bash  delta.bash  devtools.bash  emacs.bash  epel.bash  eza.bash  fzf.bash  git.bash  keychain.bash  nushell.bash  paru.bash  rhq.bash  ripgrep.bash  rustup.bash  sheldon.bash  skim.bash  souko.bash  starship.bash  tig.bash  tmux.bash  topgrade.bash  vim.bash  zellij.bash  zoxide.bash  zsh.bash
profiles/: default.txt  devcontainer.txt  full.txt
scripts/: common.bash  install_base.bash  install_bat  install_bat.bash  install_cargo_binstall  install_cargo_binstall.bash  install_cargo_update  install_cargo_update.bash  install_curl  install_curl.bash  install_delta  install_delta.bash  install_emacs  install_emacs.bash  install_epel  install_epel.bash  install_git  install_git.bash  install_keychain  install_keychain.bash  install_paru  install_paru.bash  install_rhq  install_rhq.bash  install_ripgrep  install_ripgrep.bash  install_rustup  (+27 more)
(+139 files in other folders)
